--- a/.github/workflows/ground.yml
+++ b/.github/workflows/ground.yml
@@ -9,6 +9,7 @@ outputs:
   time: # id of output
     description: 'Ground was met at'
 runs:
+  on: ubuntu-latest
   using: 'docker'
   image: 'Dockerfile'
   args:
